New UI Selenium Code and Restructuring of it

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -10,13 +10,13 @@ driver.chrome.mac32.path=/tmp/chromedriver
 driver.chrome.linux.path=/tmp/chromedriver
 
 ## test application URL
-test.browser.set.url = 10.129.86.226:8080/
-test.ui.url = 172.22.92.111:8744
+host.ambari.url = http://172.22.119.100:8080
+host.storm.server.url = http://c6502.ambari.apache.org:8744/
 
 ## valid username and password required to be used,
 ## during login in the application.
-username=admin
-password=admin
+host.ambari.login.username=admin
+host.ambari.login.password=admin
 
 
 #For downloading driver file
@@ -29,5 +29,3 @@ URL_DRIVER_MAC32=http://chromedriver.storage.googleapis.com/2.10/chromedriver_ma
 DRIVER_MAC32=chromedriver_mac32.zip
 URL_DRIVER_WIN32=http://chromedriver.storage.googleapis.com/2.10/chromedriver_win32.zip
 DRIVER_WIN32=chromedriver_win32.zip
-
-
