--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
 					<exclude>**/*.java</exclude>
 				</excludes>
 			</resource>
+			<resource>
+				<directory>resources</directory>
+			</resource>
 		</resources>
+		
 		<plugins>
 			<plugin>
 			 	<groupId>org.apache.maven.plugins</groupId>
@@ -32,11 +36,31 @@
 				<version>2.14.1</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testing.xml</suiteXmlFile>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
-
+			
+			<plugin> 
+			    <groupId>org.apache.maven.plugins</groupId> 
+			    <artifactId>maven-antrun-plugin</artifactId> 
+			    <version>1.6</version> 
+			    <executions> 
+			        <execution> 
+			            <id>process-classes</id> 
+			            <phase>process-classes</phase> 
+			            <configuration> 
+			                <target> 
+			                    <chmod file="${project.build.directory}/classes/driver/*" perm="755"/> 
+			                </target> 
+			            </configuration> 
+			            <goals> 
+			                <goal>run</goal> 
+			            </goals> 
+			        </execution> 
+			    </executions>
+		    </plugin> 
+			
 		</plugins>
 	</build>
 	<name>StormMonitoringTest</name>
@@ -66,7 +90,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-exec</artifactId>
-			<version>1.1</version>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -168,12 +192,17 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.39.0</version>
+			<version>2.48.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-remote-driver</artifactId>
+			<version>2.48.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.8.8</version>
+			<version>6.9.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
