Spout and Bolt Test Cases

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,6 +1,6 @@
 ## browser to be used to run the tests
-test.browser = firefox
-#test.browser = chrome
+#test.browser = firefox
+test.browser = chrome
 
 ## drivers required for chrome browser for different OS
 ## if you get a chrome driver executable error please provide 
@@ -10,7 +10,7 @@ driver.chrome.mac32.path=/tmp/chromedriver
 driver.chrome.linux.path=/tmp/chromedriver
 
 ## test application URL
-host.ambari.url = http://172.22.119.100:8080
+host.ambari.url = http://172.22.86.79:8080
 host.storm.server.url = http://c6502.ambari.apache.org:8744/
 
 ## valid username and password required to be used,
